Added documentation for setup and formatted all markdowns

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -51,7 +51,51 @@
    "source": [
     "### 1.1 Importing Required Libraries\n",
     "\n",
-    "Importing core libraries: dotenv for environment management, requests and httpx for HTTP requests, pymilvus for vector storage and langchain.Extensions of langchain include core, mistralai, milvus, community, text-splitters and huggingface."
+    "**Purpose**: Set up the environment, configure logging, suppress warnings, and import dependencies\n",
+    "\n",
+    "**Input**: None\n",
+    "\n",
+    "**Output**: Prints \"Dependencies imported successfully.\"\n",
+    "\n",
+    "**Processing**: \n",
+    "- Configures logging with INFO level and standard format.\n",
+    "- Disables Hugging Face tokenizers parallelism warnings.\n",
+    "- Installs required dependencies silently using pip.\n",
+    "- Suppresses non-critical warnings for clean output.\n",
+    "- Imports essential libraries for vector store operations and document processing.\n",
+    "- Confirms successful imports with a message.\n",
+    "\n",
+    "**Libraries**:\n",
+    "\n",
+    "- `os`: For interacting with the operating system and managing environment variables.\n",
+    "\n",
+    "- `logging`: For configuring and managing application logs.\n",
+    "\n",
+    "- `warnings`: For suppressing warning messages during runtime.\n",
+    "\n",
+    "- `pymilvus.connections` and `pymilvus.utility`: For connecting to and managing the Milvus vector database.\n",
+    "\n",
+    "- `create_stuff_documents_chain` from `langchain.chains.combine_documents`: For combining documents into a chain.\n",
+    "\n",
+    "- `Document` from `langchain.schema`: For representing and managing document data structures.\n",
+    "\n",
+    "- `ChatPromptTemplate` from `langchain_core.prompts`: For creating prompts to structure queries for the language model.\n",
+    "\n",
+    "- `ChatMistralAI` from `langchain_mistralai.chat_models`: For integrating the Mistral AI language model.\n",
+    "\n",
+    "- `Milvus` from `langchain_milvus`: For using the Milvus vector database with LangChain.\n",
+    "\n",
+    "- `RecursiveUrlLoader` from `langchain_community.document_loaders`: For fetching and loading documents recursively from a URL.\n",
+    "\n",
+    "- `BeautifulSoup` from `bs4`: For parsing HTML and extracting relevant content.\n",
+    "\n",
+    "- `RecursiveCharacterTextSplitter` from `langchain_text_splitters`: For splitting large text data into smaller chunks for easier processing.\n",
+    "\n",
+    "- `create_retrieval_chain` from `langchain.chains`: For building chains to retrieve and combine relevant documents.\n",
+    "\n",
+    "- `HuggingFaceEmbeddings` from `langchain_huggingface`: For generating embeddings using Hugging Face models to encode text into vectors.\n",
+    "\n",
+    "- `HTTPStatusError` from `httpx`: For handling HTTP status-related exceptions.\n"
    ]
   },
   {
@@ -142,15 +186,15 @@
    "source": [
     "#### 2.1.1 Function to Check Vector Store (Milvus database)\n",
     "\n",
-    "Purpose: \n",
+    "**Purpose**: \n",
     "To check if the Milvus vector store already exists at the specified URI.\n",
     "\n",
-    "Input: Path to the Milvus database `uri` (str).\n",
+    "**Input**: Path to the Milvus database `uri` (str).\n",
     "\n",
-    "Output: \n",
+    "**Output**: \n",
     "Returns a boolean (True if the vector store exists, False otherwise).\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- Creates the `/milvus` directory if it doesn’t exist.\n",
     "- Connects to the Milvus database at the specified uri.\n",
     "- Checks if the collection IT_support exists in the Milvus database."
@@ -188,15 +232,15 @@
    "source": [
     "#### 2.1.2 Function to fetch the embedding model\n",
     "\n",
-    "Purpose:\n",
+    "**Purpose**:\n",
     "To load and initialize the embedding model for vectorizing documents.\n",
     "\n",
-    "Input:\n",
+    "**Input**:\n",
     "None.\n",
     "\n",
-    "Output: Returns the embedding function loaded from the Hugging Face model specified in `MODEL_NAME`.\n",
+    "**Output**: Returns the embedding function loaded from the Hugging Face model specified in `MODEL_NAME`.\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- Loads the embedding model using `HuggingFaceEmbeddings`.\n",
     "- Returns the initialized embedding function."
    ]
@@ -233,16 +277,15 @@
    "metadata": {},
    "source": [
     "#### 2.2.1 Function to Clean Text\n",
-    "Purpose:\n",
+    "**Purpose**:\n",
     "To clean a given text by removing extra whitespace and blank lines.\n",
     "\n",
-    "Input:\n",
-    "- `text` (str): The input text to be cleaned.\n",
+    "**Input**: The input text to be cleaned `text` (str).\n",
     "\n",
-    "Output:\n",
+    "**Output**:\n",
     "Returns the cleaned text with unnecessary whitespace and blank lines removed.\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- Splits the text into lines and trims leading/trailing spaces from each line.\n",
     "- Removes empty lines from the text.\n",
     "- Joins the cleaned lines into a single string."
@@ -268,16 +311,15 @@
    "metadata": {},
    "source": [
     "#### 2.2.2 Function to Clean and Extract Text from HTML Content\n",
-    "Purpose:\n",
+    "**Purpose**:\n",
     "To extract and clean the main content from an HTML document.\n",
     "\n",
-    "Input:\n",
-    "- `html_content` (str): The HTML content to be cleaned.\n",
+    "**Input**: The HTML content to be cleaned `html_content` (str).\n",
     "\n",
-    "Output:\n",
+    "**Output**:\n",
     "Returns the cleaned plain text content extracted from the HTML.\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "\n",
     "- Parses the HTML using `BeautifulSoup`.\n",
     "- Removes unnecessary elements like `<script>, <style>, <header>, <footer>, and <nav>`.\n",
@@ -316,16 +358,16 @@
    "source": [
     "#### 2.2.3 Function for loading documents from the web\n",
     "\n",
-    "Purpose:\n",
+    "**Purpose**:\n",
     "To recursively load and clean documents from a web source specified in `CORPUS_SOURCE`.\n",
     "\n",
-    "Input:\n",
+    "**Input**:\n",
     "None.\n",
     "\n",
-    "Output:\n",
+    "**Output**:\n",
     "Returns a list of cleaned documents as `Document` objects.\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "\n",
     "- Uses RecursiveUrlLoader to load all pages from the base URL (`CORPUS_SOURCE`).\n",
     "- Iterates through the loaded documents:\n",
@@ -378,13 +420,13 @@
    "source": [
     "#### 2.3.1 Function to load existing vector store (Milvus database)\n",
     "\n",
-    "Purpose: To connect to an existing Milvus vector store.  \n",
+    "**Purpose**: To connect to an existing Milvus vector store.  \n",
     "\n",
-    "Input: Path to the Milvus database (`uri`).  \n",
+    "**Input**: Path to the Milvus database (`uri`).  \n",
     "\n",
-    "Output: Returns the loaded vector store as a Milvus object.  \n",
+    "**Output**: Returns the loaded vector store as a Milvus object.  \n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- Connects to the specified Milvus database.\n",
     "- Initializes a Milvus object with the collection IT_support and the embedding function from `get_embedding_function`."
    ]
@@ -424,13 +466,13 @@
    "source": [
     "#### 2.3.2 Function to split documents\n",
     "\n",
-    "Purpose: To split large documents into smaller chunks for better processing and context preservation.  \n",
+    "**Purpose**: To split large documents into smaller chunks for better processing and context preservation.  \n",
     "\n",
-    "Input: List of documents to be split.  \n",
+    "**Input**: List of documents to be split.  \n",
     "\n",
-    "Output: Returns a list of document chunks.  \n",
+    "**Output**: Returns a list of document chunks.  \n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "\n",
     "- Creates a `RecursiveCharacterTextSplitter` with a chunk size of 1000 characters and an overlap of 300 characters.\n",
     "- Splits each document into smaller chunks using the text splitter.\n",
@@ -475,18 +517,18 @@
    "source": [
     "#### 2.3.3 Function to Create New Vector Store (Milvus database)\n",
     "\n",
-    "Purpose:\n",
+    "**Purpose**:\n",
     "To create a new vector store in Milvus using the given documents and embedding function.\n",
     "\n",
-    "Input(s):\n",
+    "**Input(s)**:\n",
     "\n",
     "- `docs` (list): Documents to store in the vector database.\n",
     "- `embeddings`: The embedding function for vectorizing documents.\n",
     "- `uri` (str): Path to the Milvus database.  \n",
     "\n",
-    "Output: Returns the newly created vector store.  \n",
+    "**Output**: Returns the newly created vector store.  \n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "\n",
     "- Connects to Milvus at the specified uri.\n",
     "- Creates a new collection named IT_support, dropping any existing one.\n",
@@ -532,13 +574,13 @@
    "source": [
     "#### 2.3.4 Core function for initializing Milvus\n",
     "\n",
-    "Purpose: To initialize the Milvus vector store by either loading an existing one or creating a new one.\n",
+    "**Purpose**: To initialize the Milvus vector store by either loading an existing one or creating a new one.\n",
     "\n",
-    "Input: Path to the Milvus database `uri`.  \n",
+    "**Input**: Path to the Milvus database `uri`.  \n",
     "\n",
-    "Output: Returns the initialized vector store.  \n",
+    "**Output**: Returns the initialized vector store.  \n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- Checks if the vector store already exists using vector_store_check.\n",
     "- If it exists:  \n",
     "    - loads it using `load_existing_db`.  \n",
@@ -589,13 +631,13 @@
    "metadata": {},
    "source": [
     "#### 2.3.5 Initializing vector store (Milvus database)\n",
-    "Purpose: To initialize the Milvus database system for vector storage and retrieval.  \n",
+    "**Purpose**: To initialize the Milvus database system for vector storage and retrieval.  \n",
     "\n",
-    "Input: None.  \n",
+    "**Input**: None.  \n",
     "\n",
-    "Output: None.  \n",
+    "**Output**: None.  \n",
     "\n",
-    "Processing: Calls the `initialize_milvus` function to set up the Milvus vector database system."
+    "**Processing**: Calls the `initialize_milvus` function to set up the Milvus vector database system."
    ]
   },
   {
@@ -621,14 +663,14 @@
    "source": [
     "### 3.1 Function to create RAG prompt\n",
     "\n",
-    "Purpose:\n",
+    "**Purpose**:\n",
     "To create a prompt template for the RAG model with predefined system instructions\n",
     "\n",
-    "Input: None\n",
+    "**Input**: None\n",
     "\n",
-    "Output: Returns a `ChatPromptTemplate` object\n",
+    "**Output**: Returns a `ChatPromptTemplate` object\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- Defines a template with system instructions for generating accurate and context-based responses\n",
     "- Initializes a `ChatPromptTemplate` using the system template and a human prompt structure"
    ]
@@ -674,13 +716,13 @@
    "source": [
     "### 3.2 Function to query RAG model\n",
     "\n",
-    "Purpose: To query the RAG model for a response to a user’s question.\n",
+    "**Purpose**: To query the RAG model for a response to a user’s question.\n",
     "\n",
-    "Input: User’s question query.\n",
+    "**Input**: User’s question query.\n",
     "\n",
-    "Output: Returns the generated response from the RAG model, including source references.\n",
+    "**Output**: Returns the generated response from the RAG model, including source references.\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "\n",
     "- Initializes the MistralAI model.\n",
     "- Loads the prompt template using `create_prompt`.\n",
@@ -768,13 +810,13 @@
    "source": [
     "### 3.3 Get response from RAG\n",
     "\n",
-    "Purpose: Taking input query from user, executing it and displaying the fetched output.  \n",
+    "**Purpose**: Taking input query from user, executing it and displaying the fetched output.  \n",
     "\n",
-    "Input: User's question. \n",
+    "**Input**: User's question. \n",
     "\n",
-    "Output: Response generated from the `query_rag` function.\n",
+    "**Output**: Response generated from the `query_rag` function.\n",
     "\n",
-    "Processing:\n",
+    "**Processing**:\n",
     "- User input: Prompts the user to input a query.\n",
     "- Query execution: Passes the user-provided query to the `query_rag` function.\n",
     "- Response display: Prints the response generated."
