added a markdown "conclusion" to jupyter documentation

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ITS Support Chatbot\n",
+    "# IT Support Chatbot\n",
     "\n",
     "This chatbot is an educational tool that's built to answer questions related to the CSUSB's [Information Technology Services](https://www.csusb.edu/its). The chatbot was built by team 1 for [CSE 6550: Software Engineering Concepts](https://catalog.csusb.edu/coursesaz/cse/)\n",
     "\n",
@@ -35,7 +35,7 @@
     "    - 3.1. [Create RAG Prompt](#3.1-Function-to-create-RAG-prompt)  \n",
     "    - 3.2. [Query RAG](#3.2-Function-to-query-RAG-model)  \n",
     "    - 3.3. [Retrieve RAG Response](#3.3-Get-response-from-RAG)  \n",
-    "4. [Contributors](#4-Contributors)\n"
+    "4. [Conclusion](#4-Conclusion)\n"
    ]
   },
   {
@@ -148,8 +148,46 @@
    "source": [
     "### 1.2 Set Up Environment Variables\n",
     "\n",
+    "**Purpose**:\n",
     "\n",
-    "Load the necessary environment variables for RAG operation. `CORPUS_SOURCE` can be modified to load a different corpus, `MISTRAL_API_KEY` stores the MistralAI API key, `MILVUS_URI` provides the path for the milvus lite database file, and `MODEL_NAME` specifies the embedding model for the corpus."
+    "To define and load the environment variables required for the RAG (Retrieval-Augmented Generation) operation, including settings for the corpus source, API key, vector store database, and embedding model.\n",
+    "\n",
+    "**Input**:\n",
+    "No direct input to this block, but it implicitly relies on:\n",
+    "\n",
+    "1. The environment variable `MISTRAL_API_KEY` being set in the system/environment.\n",
+    "\n",
+    "**Output**:\n",
+    "1. Four variables are defined and available for subsequent code execution:\n",
+    "\n",
+    "- `CORPUS_SOURCE`: URL of the corpus to be processed (default: `'https://www.csusb.edu/its'`).\n",
+    "- `MISTRAL_API_KEY`: API key for authenticating with the MistralAI service, fetched from system environment variables.\n",
+    "- MILVUS_URI`: File path for the Milvus Lite vector database (default: `'milvus/jupyter_milvus_vector.db'`).\n",
+    "- `MODEL_NAME`: Name of the embedding model for vectorizing documents (default: `'sentence-transformers/all-MiniLM-L12-v2'`).\n",
+    "2. Prints `\"ENV variables defined.\"` to indicate successful setup.\n",
+    "\n",
+    "**Processing**:\n",
+    "1. **Set the Corpus Source**:\n",
+    "\n",
+    "- Assigns the URL (`https://www.csusb.edu/its`) to the variable `CORPUS_SOURCE`.\n",
+    "- This specifies the website from which documents will be loaded for processing.\n",
+    "\n",
+    "2. **Fetch Mistral API Key**:\n",
+    "\n",
+    "- Retrieves the API key for MistralAI using `os.environ.get(\"MISTRAL_API_KEY\")`.\n",
+    "- This ensures secure access by fetching sensitive credentials from the system's environment variables.\n",
+    "3. **Set the Milvus Database Path**:\n",
+    "\n",
+    "- Defines the file path (`milvus/jupyter_milvus_vector.db`) for the Milvus Lite vector store via `MILVUS_URI`.\n",
+    "- This will be used to store and retrieve vector embeddings.\n",
+    "4. **Set the Embedding Model Name**:\n",
+    "\n",
+    "- Specifies the name of the Hugging Face embedding model (`sentence-transformers/all-MiniLM-L12-v2`) in `MODEL_NAME`.\n",
+    "- This model is used for transforming text into vector embeddings for document processing.\n",
+    "5. **Print Status**:\n",
+    "\n",
+    "- Prints a confirmation message (`\"ENV variables defined.\"`) to confirm successful setup.\n",
+    "\n"
    ]
   },
   {
@@ -831,6 +869,36 @@
     "response = query_rag(input(\"Enter your query: \"))\n",
     "\n",
     "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " **Recap**:\n",
+    "\n",
+    "- Developed an **IT Support chatbot** using the **RAG (Retrieval-Augmented Generation)** system, which retrieves relevant documents and generates responses based on the context provided.\n",
+    "- Integrated **widgets** in **Jupyter Notebook** for interactive user input and response display, enabling real-time query processing.\n",
+    "- Configured the chatbot with **natural language processing models** like **Mistral AI** and **vector-based document retrieval** using **Milvus**, ensuring accurate and context-aware responses.\n",
+    "\n",
+    "**Next Steps**:\n",
+    "\n",
+    "- Expand the chatbot's knowledge base to accommodate a broader range of questions or integrate multiple datasets from diverse sources, enhancing the system’s robustness and versatility.\n",
+    "- Improve the chatbot’s performance and extend its capabilities by incorporating more advanced features, such as deeper integrations with external knowledge sources and enhanced response-generation techniques.\n",
+    "\n",
+    "**Resources**:\n",
+    "\n",
+    "- \"The **IT Support Chatbot** project was developed by **CSUSB Fall 2024 CSE6550 Team 1**  to provide automated assistance for IT-related queries and technical support.\"\n",
+    "\n",
+    "[![GitHub](https://img.shields.io/badge/GitHub-black?style=flat&logo=github&logoColor=white)](https://github.com/DrAlzahraniProjects/csusb_fall2024_cse6550_team1) \n",
+    "[![Wiki](https://img.shields.io/badge/Wiki-blue?style=flat&logo=wikipedia&logoColor=white)](https://github.com/DrAlzahraniProjects/csusb_fall2024_cse6550_team1/wiki)\n"
    ]
   }
  ],
