added Python env

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -15,8 +15,9 @@
     "\n",
     "## Table of Contents\n",
     "1. [Setup](#1-Setup)  \n",
-    "    - 1.1. [Import Required Libraries](#1.1-Importing-Required-Libraries)  \n",
-    "    - 1.2. [Set Up Environment Variables](#1.2-Set-Up-Environment-Variables)  \n",
+    "    - 1.1. [Requirements and Environment](#1.1-Requirements-and-Environment)  \n",
+    "    - 1.2. [Import Required Libraries](#1.2-Importing-Required-Libraries)  \n",
+    "    - 1.3. [Set Up Environment Variables](#1.3-Set-Up-Environment-Variables)  \n",
     "2. [Building the Chatbot](#2.-Building-the-Chatbot)  \n",
     "    - 2.1 [Vector Store and Embeddings](#2.1-Vector-Store-and-Embeddings)\n",
     "        - 2.1.1. [Create Vector Store](#2.1.1-Function-to-fetch-the-embedding-model)  \n",
@@ -49,7 +50,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Importing Required Libraries\n",
+    "### 1.1 Requirements and Environment\n",
+    "\n",
+    "Requirements (Must be installed before continuing):\n",
+    "- Python >= 3.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Environment Installation:\n",
+    "- Install ipykernel and virtualenv\n",
+    "- Activate new virtual environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ipykernel --root-user-action=ignore\n",
+    "!pip install --user virtualenv --root-user-action=ignore --no-warn-script-location\n",
+    "!python -m venv chatbot\n",
+    "!. chatbot/bin/activate\n",
+    "print('Virtual Environment Created!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Importing Required Libraries\n",
     "\n",
     "**Purpose**: Set up the environment, configure logging, suppress warnings, and import dependencies\n",
     "\n",
@@ -68,8 +110,6 @@
     "**Libraries**:\n",
     "\n",
     "- `os`: For interacting with the operating system and managing environment variables.\n",
-    "\n",
-    "- `logging`: For configuring and managing application logs.\n",
     "\n",
     "- `warnings`: For suppressing warning messages during runtime.\n",
     "\n",
@@ -105,21 +145,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import logging\n",
-    "\n",
-    "# Configure logging\n",
-    "logging.basicConfig(\n",
-    "    level=logging.INFO,  # Set the logging level to INFO\n",
-    "    format=\"%(asctime)s - %(name)s - %(levelname)s - %(message)s\",\n",
-    ")\n",
-    "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Suppress Hugging Face tokenizers parallelism warning\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "\n",
     "# Installing dependencies if not already installed, suppressing \"Requirement already satisfied\" warnings\n",
     "!pip install -q httpx pymilvus --root-user-action=ignore\n",
-    "!pip install -q langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
+    "!pip install -q langchain langchain-core langchain-mistralai langchain-milvus langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -146,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Set Up Environment Variables\n",
+    "### 1.3 Set Up Environment Variables\n",
     "\n",
     "**Purpose**:\n",
     "\n",
@@ -492,7 +524,7 @@
     "        connection_args={\"uri\": uri},\n",
     "    )\n",
     "    \n",
-    "    logger.info(\"Vector store loaded\")\n",
+    "    print(\"Vector store loaded\")\n",
     "    return vector_store\n",
     "\n",
     "print(\"Function `load_existing_db` defined.\")"
@@ -543,7 +575,7 @@
     "    # Split the documents into chunks\n",
     "    docs = text_splitter.split_documents(documents)\n",
     "    \n",
-    "    logger.info(\"Documents successfully split\")\n",
+    "    print(\"Documents successfully split\")\n",
     "    return docs\n",
     "\n",
     "print(\"Function `split_documents` defined.\")"
@@ -600,7 +632,7 @@
     "        drop_old=True,\n",
     "    )\n",
     "    \n",
-    "    logger.info(\"Vector store created\")\n",
+    "    print(\"Vector store created\")\n",
     "    return vector_store\n",
     "\n",
     "print(\"Function `create_vector_store` defined.\")"
@@ -646,19 +678,19 @@
     "    \"\"\"\n",
     "    if vector_store_check(uri):\n",
     "        vector_store = load_existing_db(uri)\n",
-    "        logger.info(\"Embeddings loaded from existing storage\")\n",
+    "        print(\"Embeddings loaded from existing storage\")\n",
     "    else:\n",
     "        embeddings = get_embedding_function()\n",
-    "        logger.info(\"Embeddings Loaded\")\n",
+    "        print(\"Embeddings Loaded\")\n",
     "        documents = load_documents_from_web()\n",
-    "        logger.info(\"Documents Loaded\")\n",
+    "        print(\"Documents Loaded\")\n",
     "    \n",
     "        # Split the documents into chunks\n",
     "        docs = split_documents(documents=documents)\n",
-    "        logger.info(\"Documents Splitting completed\")\n",
+    "        print(\"Documents Splitting completed\")\n",
     "    \n",
     "        vector_store = create_vector_store(docs, embeddings, uri)\n",
-    "    logger.info(\"Milvus successfully initialized\")\n",
+    "    print(\"Milvus successfully initialized\")\n",
     "    return vector_store\n",
     "\n",
     "print(\"Function `initialize_milvus` defined.\")"
@@ -742,7 +774,7 @@
     "        (\"human\", \"<question>{input}</question>\\n\\n<context>{context}</context>\"),\n",
     "    ])\n",
     "\n",
-    "    logger.info(\"Prompt template defined\")\n",
+    "    print(\"Prompt template defined\")\n",
     "    return prompt\n",
     "\n",
     "print(\"Function `create_prompt` defined.\")"
@@ -791,7 +823,7 @@
     "    \"\"\"\n",
     "    # Define the model\n",
     "    model = ChatMistralAI(model='open-mistral-7b')\n",
-    "    logger.info(\"Model Loaded\")\n",
+    "    print(\"Model Loaded\")\n",
     "\n",
     "    prompt = create_prompt()\n",
     "\n",
@@ -800,21 +832,21 @@
     "    retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"score_threshold\": 0.7, \"k\":5})\n",
     "    try:\n",
     "        document_chain = create_stuff_documents_chain(model, prompt)\n",
-    "        logger.info(\"Document Chain Created\")\n",
+    "        print(\"Document Chain Created\")\n",
     "\n",
     "        retrieval_chain = create_retrieval_chain(retriever, document_chain)\n",
-    "        logger.info(\"Retrieval Chain Created\")\n",
+    "        print(\"Retrieval Chain Created\")\n",
     "    \n",
     "        # Generate a response to the query\n",
     "        response = retrieval_chain.invoke({\"input\": f\"{query}\"})\n",
     "    except HTTPStatusError as e:\n",
-    "        logger.error(f\"HTTPStatusError: {e}\")\n",
+    "        print(f\"HTTPStatusError: {e}\")\n",
     "        if e.response.status_code == 429:\n",
     "            error_message = \"I am currently experiencing high traffic. Please try again later.\"\n",
-    "            logger.error(error_message)\n",
+    "            print(error_message)\n",
     "            return error_message, []\n",
     "        error_message = \"I am unable to answer this question at the moment. Please try again later.\"\n",
-    "        logger.error(error_message)\n",
+    "        print(error_message)\n",
     "        return error_message, []\n",
     "    \n",
     "    # logic to add sources to the response\n",
@@ -904,7 +936,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -918,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
