--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -194,9 +194,9 @@
     "\n",
     "- `CORPUS_SOURCE`: URL of the corpus to be processed (default: `'https://www.csusb.edu/its'`).\n",
     "- `MISTRAL_API_KEY`: API key for authenticating with the MistralAI service, fetched from system environment variables.\n",
-    "- MILVUS_URI`: File path for the Milvus Lite vector database (default: `'milvus/jupyter_milvus_vector.db'`).\n",
+    "- `MILVUS_URI`: File path for the Milvus Lite vector database (default: `'milvus/jupyter_milvus_vector.db'`).\n",
     "- `MODEL_NAME`: Name of the embedding model for vectorizing documents (default: `'sentence-transformers/all-MiniLM-L12-v2'`).\n",
-    "2. Prints `\"ENV variables defined.\"` to indicate successful setup.\n",
+    "2. Prints \"ENV variables defined.\" to indicate successful setup.\n",
     "\n",
     "**Processing**:\n",
     "1. **Set the Corpus Source**:\n",
