Env Jupyter fix
Env Jupyter fix

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -69,12 +69,10 @@
       },
       "outputs": [],
       "source": [
-        "!pip install ipykernel --root-user-action=ignore\n",
-        "!pip install --user virtualenv --root-user-action=ignore --no-warn-script-location\n",
         "!apt update && apt install -y python3.10-venv\n",
         "!python3.10 -m venv chatbot\n",
-        "!source chatbot/bin/activate\n",
-        "!. chatbot/bin/activate\n",
+        "!chatbot/bin/pip install ipykernel\n",
+        "!chatbot/bin/python -m ipykernel install --user --name=chatbot\n",
         "print('Virtual Environment Created!')"
       ]
     },
