--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -6,7 +6,7 @@
         "id": "pViAbjuYASA9"
       },
       "source": [
-        "# IT Support Chatbot\n",
+        "# ITS Support Chatbot\n",
         "\n",
         "This chatbot is an educational tool that's built to answer questions related to the CSUSB's [Information Technology Services](https://www.csusb.edu/its). The chatbot was built by team 1 for [CSE 6550: Software Engineering Concepts](https://catalog.csusb.edu/coursesaz/cse/)\n",
         "\n",
@@ -1002,7 +1002,7 @@
       "source": [
         " **Recap**:\n",
         "\n",
-        "- Developed an **IT Support chatbot** using the **RAG (Retrieval-Augmented Generation)** system, which retrieves relevant documents and generates responses based on the context provided.\n",
+        "- Developed an **ITS Support chatbot** using the **RAG (Retrieval-Augmented Generation)** system, which retrieves relevant documents and generates responses based on the context provided.\n",
         "- Integrated **widgets** in **Jupyter Notebook** for interactive user input and response display, enabling real-time query processing.\n",
         "- Configured the chatbot with **natural language processing models** like **Mistral AI** and **vector-based document retrieval** using **Milvus**, ensuring accurate and context-aware responses.\n",
         "\n",
@@ -1013,7 +1013,7 @@
         "\n",
         "**Resources**:\n",
         "\n",
-        "- \"The **IT Support Chatbot** project was developed by **CSUSB Fall 2024 CSE6550 Team 1**  to provide automated assistance for IT-related queries and technical support.\"\n",
+        "- \"The **ITS Support Chatbot** project was developed by **CSUSB Fall 2024 CSE6550 Team 1**  to provide automated assistance for IT-related queries and technical support.\"\n",
         "\n",
         "[![GitHub](https://img.shields.io/badge/GitHub-black?style=flat&logo=github&logoColor=white)](https://github.com/DrAlzahraniProjects/csusb_fall2024_cse6550_team1)\n",
         "[![Wiki](https://img.shields.io/badge/Wiki-blue?style=flat&logo=wikipedia&logoColor=white)](https://github.com/DrAlzahraniProjects/csusb_fall2024_cse6550_team1/wiki)\n"
