--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -183,7 +183,7 @@
     "\n",
     "# Installing dependencies if not already installed, suppressing \"Requirement already satisfied\" warnings\n",
     "!chatbot/bin/pip install -q httpx pymilvus python-dotenv --root-user-action=ignore\n",
-    "!chatbot/bin/pip install -q langchain langchain-core langchain-milvus langchain-groq langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface sentence-transformers --root-user-action=ignore\n",
+    "!chatbot/bin/pip install -q langchain langchain-core langchain-milvus langchain-groq langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
